// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Toggle examples Disabled and active toggles should render correctly 1`] = `
<div>
  <fieldset
    class="v-toggle-container"
  >
    <button
      aria-pressed="true"
      class="v-toggle v-gap-6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-map-location"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M10 6C10 7.10457 9.10457 8 8 8C6.89543 8 6 7.10457 6 6C6 4.89543 6.89543 4 8 4C9.10457 4 10 4.89543 10 6Z"
        />
        <path
          class="v-icon-primary"
          clip-rule="evenodd"
          d="M7.51886 2C5.57545 2 4 3.57545 4 5.51886C4 6.29936 4.21934 7.06414 4.633 7.726L8 13.1132L11.367 7.726C11.7807 7.06414 12 6.29936 12 5.51886C12 3.57545 10.4246 2 8.48114 2H7.51886ZM2 5.51886C2 2.47088 4.47088 0 7.51886 0H8.48114C11.5291 0 14 2.47088 14 5.51886C14 6.6742 13.6753 7.80628 13.063 8.786L8 16.8868L2.937 8.786C2.32468 7.80628 2 6.6742 2 5.51886Z"
          fill-rule="evenodd"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
      Label 1
    </button>
    <button
      aria-pressed="false"
      class="v-toggle v-gap-6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-view-list"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          clip-rule="evenodd"
          d="M4 2.99219H2V4.99219H4V2.99219ZM0 0.992188V6.99219H6V0.992188H0ZM8 4.99219H16V2.99219H8V4.99219ZM8 12.9922H16V10.9922H8V12.9922ZM2 10.9922H4V12.9922H2V10.9922ZM0 14.9922V8.99219H6V14.9922H0Z"
          fill-rule="evenodd"
        />
      </svg>
      Label 2
    </button>
    <button
      aria-pressed="false"
      class="v-toggle v-gap-6"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-view-grid"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          clip-rule="evenodd"
          d="M3 2.99219H5V4.99219H3V2.99219ZM1 6.99219V0.992188H7V6.99219H1ZM3 10.9922H5V12.9922H3V10.9922ZM1 14.9922V8.99219H7V14.9922H1ZM13 2.99219H11V4.99219H13V2.99219ZM9 0.992188V6.99219H15V0.992188H9ZM11 10.9922H13V12.9922H11V10.9922ZM9 14.9922V8.99219H15V14.9922H9Z"
          fill-rule="evenodd"
        />
      </svg>
      Label 3
    </button>
  </fieldset>
</div>
`;

exports[`Toggle examples Disabled toggles should render correctly 1`] = `
<div>
  <fieldset
    class="v-toggle-container"
  >
    <button
      class="v-toggle v-gap-6"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-map-location"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M10 6C10 7.10457 9.10457 8 8 8C6.89543 8 6 7.10457 6 6C6 4.89543 6.89543 4 8 4C9.10457 4 10 4.89543 10 6Z"
        />
        <path
          class="v-icon-primary"
          clip-rule="evenodd"
          d="M7.51886 2C5.57545 2 4 3.57545 4 5.51886C4 6.29936 4.21934 7.06414 4.633 7.726L8 13.1132L11.367 7.726C11.7807 7.06414 12 6.29936 12 5.51886C12 3.57545 10.4246 2 8.48114 2H7.51886ZM2 5.51886C2 2.47088 4.47088 0 7.51886 0H8.48114C11.5291 0 14 2.47088 14 5.51886C14 6.6742 13.6753 7.80628 13.063 8.786L8 16.8868L2.937 8.786C2.32468 7.80628 2 6.6742 2 5.51886Z"
          fill-rule="evenodd"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
      Label 1
    </button>
    <button
      class="v-toggle v-gap-6"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-view-list"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          clip-rule="evenodd"
          d="M4 2.99219H2V4.99219H4V2.99219ZM0 0.992188V6.99219H6V0.992188H0ZM8 4.99219H16V2.99219H8V4.99219ZM8 12.9922H16V10.9922H8V12.9922ZM2 10.9922H4V12.9922H2V10.9922ZM0 14.9922V8.99219H6V14.9922H0Z"
          fill-rule="evenodd"
        />
      </svg>
      Label 2
    </button>
    <button
      class="v-toggle v-gap-6"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-view-grid"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          clip-rule="evenodd"
          d="M3 2.99219H5V4.99219H3V2.99219ZM1 6.99219V0.992188H7V6.99219H1ZM3 10.9922H5V12.9922H3V10.9922ZM1 14.9922V8.99219H7V14.9922H1ZM13 2.99219H11V4.99219H13V2.99219ZM9 0.992188V6.99219H15V0.992188H9ZM11 10.9922H13V12.9922H11V10.9922ZM9 14.9922V8.99219H15V14.9922H9Z"
          fill-rule="evenodd"
        />
      </svg>
      Label 3
    </button>
  </fieldset>
</div>
`;

exports[`Toggle examples Multi-select toggles should render correctly 1`] = `
<div>
  <fieldset
    class="v-toggle-container"
  >
    <button
      aria-label="Label 1"
      aria-pressed="true"
      class="v-toggle v-gap-6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-low v-icon-map-location"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M12 12.001C10.07 12.001 8.5 10.431 8.5 8.50098C8.5 6.57098 10.07 5.00098 12 5.00098C13.93 5.00098 15.5 6.57098 15.5 8.50098C15.5 10.431 13.93 12.001 12 12.001ZM12 7.00098C11.17 7.00098 10.5 7.67098 10.5 8.50098C10.5 9.33098 11.17 10.001 12 10.001C12.83 10.001 13.5 9.33098 13.5 8.50098C13.5 7.67098 12.83 7.00098 12 7.00098Z"
        />
        <path
          class="v-icon-primary"
          d="M12.8596 22.511H11.1496L5.14955 12.511C2.98955 8.92098 4.15955 4.24098 7.74955 2.08098C8.92955 1.37098 10.2796 1.00098 11.6596 1.00098H12.3396C16.5296 1.00098 19.9396 4.41098 19.9396 8.60098C19.9396 9.98098 19.5596 11.331 18.8596 12.511L12.8596 22.511ZM11.6596 3.00098C10.6396 3.00098 9.64955 3.28098 8.77955 3.80098C6.12955 5.39098 5.26955 8.84098 6.85955 11.491L11.9996 20.061L17.1396 11.491C17.6596 10.621 17.9396 9.62098 17.9396 8.61098C17.9396 5.52098 15.4296 3.01098 12.3396 3.01098H11.6596V3.00098Z"
        />
      </svg>
    </button>
    <button
      aria-label="Label 2"
      aria-pressed="false"
      class="v-toggle v-gap-6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-low v-icon-view-list"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          clip-rule="evenodd"
          d="M4 20H11V13H4V20ZM9 18H6V15H9V18ZM13 17.5H20V15.5H13V17.5ZM4 11H11V4H4V11ZM9 9H6V6H9V9ZM13 8.5H20V6.5H13V8.5Z"
          fill-rule="evenodd"
        />
        <path
          class="v-icon-primary"
          clip-rule="evenodd"
          d="M0 21C0 22.65 1.35 24 3 24H21C22.65 24 24 22.65 24 21V3C24 1.35 22.65 0 21 0H3C1.35 0 0 1.35 0 3V21ZM2 3C2 2.45 2.45 2 3 2H21C21.55 2 22 2.45 22 3V21C22 21.55 21.55 22 21 22H3C2.45 22 2 21.55 2 21V3Z"
          fill-rule="evenodd"
        />
        <defs>
          <clippath>
            <rect
              height="24"
              width="24"
            />
          </clippath>
        </defs>
      </svg>
    </button>
    <button
      aria-label="Label 3"
      aria-pressed="true"
      class="v-toggle v-gap-6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-low v-icon-view-grid"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          clip-rule="evenodd"
          d="M4 11H11V4H4V11ZM9 9H6V6H9V9ZM13 11H20V4H13V11ZM18 9H15V6H18V9ZM20 20H13V13H20V20ZM15 18H18V15H15V18ZM4 20H11V13H4V20ZM9 18H6V15H9V18Z"
          fill-rule="evenodd"
        />
        <path
          class="v-icon-primary"
          d="M21 24H3C1.35 24 0 22.65 0 21V3C0 1.35 1.35 0 3 0H21C22.65 0 24 1.35 24 3V21C24 22.65 22.65 24 21 24ZM3 2C2.45 2 2 2.45 2 3V21C2 21.55 2.45 22 3 22H21C21.55 22 22 21.55 22 21V3C22 2.45 21.55 2 21 2H3Z"
        />
        <defs>
          <clippath>
            <rect
              height="24"
              width="24"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </fieldset>
</div>
`;

exports[`Toggle examples Multi-select toggles using checkboxes should render correctly 1`] = `
<div>
  <fieldset
    class="v-toggle-container"
  >
    <label
      aria-label="Label 1"
      class="v-toggle v-gap-6"
      for="multi-select-checkbox-toggle-option-0"
    >
      <input
        checked=""
        class="v-checkbox"
        id="multi-select-checkbox-toggle-option-0"
        name="multi-select-checkbox-toggle-options"
        type="checkbox"
      />
       
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-low v-icon-map-location"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M12 12.001C10.07 12.001 8.5 10.431 8.5 8.50098C8.5 6.57098 10.07 5.00098 12 5.00098C13.93 5.00098 15.5 6.57098 15.5 8.50098C15.5 10.431 13.93 12.001 12 12.001ZM12 7.00098C11.17 7.00098 10.5 7.67098 10.5 8.50098C10.5 9.33098 11.17 10.001 12 10.001C12.83 10.001 13.5 9.33098 13.5 8.50098C13.5 7.67098 12.83 7.00098 12 7.00098Z"
        />
        <path
          class="v-icon-primary"
          d="M12.8596 22.511H11.1496L5.14955 12.511C2.98955 8.92098 4.15955 4.24098 7.74955 2.08098C8.92955 1.37098 10.2796 1.00098 11.6596 1.00098H12.3396C16.5296 1.00098 19.9396 4.41098 19.9396 8.60098C19.9396 9.98098 19.5596 11.331 18.8596 12.511L12.8596 22.511ZM11.6596 3.00098C10.6396 3.00098 9.64955 3.28098 8.77955 3.80098C6.12955 5.39098 5.26955 8.84098 6.85955 11.491L11.9996 20.061L17.1396 11.491C17.6596 10.621 17.9396 9.62098 17.9396 8.61098C17.9396 5.52098 15.4296 3.01098 12.3396 3.01098H11.6596V3.00098Z"
        />
      </svg>
    </label>
    <label
      aria-label="Label 2"
      class="v-toggle v-gap-6"
      for="multi-select-checkbox-toggle-option-1"
    >
      <input
        class="v-checkbox"
        id="multi-select-checkbox-toggle-option-1"
        name="multi-select-checkbox-toggle-options"
        type="checkbox"
      />
       
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-low v-icon-view-list"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          clip-rule="evenodd"
          d="M4 20H11V13H4V20ZM9 18H6V15H9V18ZM13 17.5H20V15.5H13V17.5ZM4 11H11V4H4V11ZM9 9H6V6H9V9ZM13 8.5H20V6.5H13V8.5Z"
          fill-rule="evenodd"
        />
        <path
          class="v-icon-primary"
          clip-rule="evenodd"
          d="M0 21C0 22.65 1.35 24 3 24H21C22.65 24 24 22.65 24 21V3C24 1.35 22.65 0 21 0H3C1.35 0 0 1.35 0 3V21ZM2 3C2 2.45 2.45 2 3 2H21C21.55 2 22 2.45 22 3V21C22 21.55 21.55 22 21 22H3C2.45 22 2 21.55 2 21V3Z"
          fill-rule="evenodd"
        />
        <defs>
          <clippath>
            <rect
              height="24"
              width="24"
            />
          </clippath>
        </defs>
      </svg>
    </label>
    <label
      aria-label="Label 3"
      class="v-toggle v-gap-6"
      for="multi-select-checkbox-toggle-option-2"
    >
      <input
        checked=""
        class="v-checkbox"
        id="multi-select-checkbox-toggle-option-2"
        name="multi-select-checkbox-toggle-options"
        type="checkbox"
      />
       
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-low v-icon-view-grid"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          clip-rule="evenodd"
          d="M4 11H11V4H4V11ZM9 9H6V6H9V9ZM13 11H20V4H13V11ZM18 9H15V6H18V9ZM20 20H13V13H20V20ZM15 18H18V15H15V18ZM4 20H11V13H4V20ZM9 18H6V15H9V18Z"
          fill-rule="evenodd"
        />
        <path
          class="v-icon-primary"
          d="M21 24H3C1.35 24 0 22.65 0 21V3C0 1.35 1.35 0 3 0H21C22.65 0 24 1.35 24 3V21C24 22.65 22.65 24 21 24ZM3 2C2.45 2 2 2.45 2 3V21C2 21.55 2.45 22 3 22H21C21.55 22 22 21.55 22 21V3C22 2.45 21.55 2 21 2H3Z"
        />
        <defs>
          <clippath>
            <rect
              height="24"
              width="24"
            />
          </clippath>
        </defs>
      </svg>
    </label>
  </fieldset>
</div>
`;

exports[`Toggle examples Single-select toggles should render correctly 1`] = `
<div>
  <fieldset
    class="v-toggle-container"
  >
    <button
      aria-pressed="true"
      class="v-toggle v-gap-6"
    >
      Label 1
    </button>
    <button
      aria-pressed="false"
      class="v-toggle v-gap-6"
    >
      Label 2
    </button>
    <button
      aria-pressed="false"
      class="v-toggle v-gap-6"
    >
      Label 3
    </button>
  </fieldset>
</div>
`;

exports[`Toggle examples Single-select toggles using radio buttons should render correctly 1`] = `
<div>
  <fieldset
    class="v-toggle-container"
  >
    <label
      class="v-toggle v-gap-6"
      for="single-select-radio-toggles-label-1"
    >
      <input
        checked=""
        class="v-radio"
        id="single-select-radio-toggles-label-1"
        name="single-select-radio-toggles-options"
        type="radio"
      />
      Label 1
    </label>
    <label
      class="v-toggle v-gap-6"
      for="single-select-radio-toggles-label-2"
    >
      <input
        class="v-radio"
        id="single-select-radio-toggles-label-2"
        name="single-select-radio-toggles-options"
        type="radio"
      />
      Label 2
    </label>
    <label
      class="v-toggle v-gap-6"
      for="single-select-radio-toggles-label-3"
    >
      <input
        class="v-radio"
        id="single-select-radio-toggles-label-3"
        name="single-select-radio-toggles-options"
        type="radio"
      />
      Label 3
    </label>
  </fieldset>
</div>
`;

exports[`Toggle examples Single-select toggles with icon only should render correctly 1`] = `
<div>
  <fieldset
    class="v-toggle-container"
  >
    <button
      aria-label="Label 1"
      aria-pressed="true"
      class="v-toggle v-gap-6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-map-location"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M10 6C10 7.10457 9.10457 8 8 8C6.89543 8 6 7.10457 6 6C6 4.89543 6.89543 4 8 4C9.10457 4 10 4.89543 10 6Z"
        />
        <path
          class="v-icon-primary"
          clip-rule="evenodd"
          d="M7.51886 2C5.57545 2 4 3.57545 4 5.51886C4 6.29936 4.21934 7.06414 4.633 7.726L8 13.1132L11.367 7.726C11.7807 7.06414 12 6.29936 12 5.51886C12 3.57545 10.4246 2 8.48114 2H7.51886ZM2 5.51886C2 2.47088 4.47088 0 7.51886 0H8.48114C11.5291 0 14 2.47088 14 5.51886C14 6.6742 13.6753 7.80628 13.063 8.786L8 16.8868L2.937 8.786C2.32468 7.80628 2 6.6742 2 5.51886Z"
          fill-rule="evenodd"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
    <button
      aria-label="Label 2"
      aria-pressed="false"
      class="v-toggle v-gap-6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-view-list"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          clip-rule="evenodd"
          d="M4 2.99219H2V4.99219H4V2.99219ZM0 0.992188V6.99219H6V0.992188H0ZM8 4.99219H16V2.99219H8V4.99219ZM8 12.9922H16V10.9922H8V12.9922ZM2 10.9922H4V12.9922H2V10.9922ZM0 14.9922V8.99219H6V14.9922H0Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <button
      aria-label="Label 3"
      aria-pressed="false"
      class="v-toggle v-gap-6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-view-grid"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          clip-rule="evenodd"
          d="M3 2.99219H5V4.99219H3V2.99219ZM1 6.99219V0.992188H7V6.99219H1ZM3 10.9922H5V12.9922H3V10.9922ZM1 14.9922V8.99219H7V14.9922H1ZM13 2.99219H11V4.99219H13V2.99219ZM9 0.992188V6.99219H15V0.992188H9ZM11 10.9922H13V12.9922H11V10.9922ZM9 14.9922V8.99219H15V14.9922H9Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </fieldset>
</div>
`;

exports[`Toggle examples Single-select toggles with leading icon should render correctly 1`] = `
<div>
  <fieldset
    class="v-toggle-container"
  >
    <button
      aria-pressed="true"
      class="v-toggle v-gap-6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-map-location"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M10 6C10 7.10457 9.10457 8 8 8C6.89543 8 6 7.10457 6 6C6 4.89543 6.89543 4 8 4C9.10457 4 10 4.89543 10 6Z"
        />
        <path
          class="v-icon-primary"
          clip-rule="evenodd"
          d="M7.51886 2C5.57545 2 4 3.57545 4 5.51886C4 6.29936 4.21934 7.06414 4.633 7.726L8 13.1132L11.367 7.726C11.7807 7.06414 12 6.29936 12 5.51886C12 3.57545 10.4246 2 8.48114 2H7.51886ZM2 5.51886C2 2.47088 4.47088 0 7.51886 0H8.48114C11.5291 0 14 2.47088 14 5.51886C14 6.6742 13.6753 7.80628 13.063 8.786L8 16.8868L2.937 8.786C2.32468 7.80628 2 6.6742 2 5.51886Z"
          fill-rule="evenodd"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
      Label 1
    </button>
    <button
      aria-pressed="false"
      class="v-toggle v-gap-6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-view-list"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          clip-rule="evenodd"
          d="M4 2.99219H2V4.99219H4V2.99219ZM0 0.992188V6.99219H6V0.992188H0ZM8 4.99219H16V2.99219H8V4.99219ZM8 12.9922H16V10.9922H8V12.9922ZM2 10.9922H4V12.9922H2V10.9922ZM0 14.9922V8.99219H6V14.9922H0Z"
          fill-rule="evenodd"
        />
      </svg>
      Label 2
    </button>
    <button
      aria-pressed="false"
      class="v-toggle v-gap-6"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-view-grid"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          clip-rule="evenodd"
          d="M3 2.99219H5V4.99219H3V2.99219ZM1 6.99219V0.992188H7V6.99219H1ZM3 10.9922H5V12.9922H3V10.9922ZM1 14.9922V8.99219H7V14.9922H1ZM13 2.99219H11V4.99219H13V2.99219ZM9 0.992188V6.99219H15V0.992188H9ZM11 10.9922H13V12.9922H11V10.9922ZM9 14.9922V8.99219H15V14.9922H9Z"
          fill-rule="evenodd"
        />
      </svg>
      Label 3
    </button>
  </fieldset>
</div>
`;

exports[`Toggle examples Single-select toggles with trailing icon should render correctly 1`] = `
<div>
  <fieldset
    class="v-toggle-container"
  >
    <button
      aria-pressed="true"
      class="v-toggle v-gap-6"
    >
      Label 1
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-map-location"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M10 6C10 7.10457 9.10457 8 8 8C6.89543 8 6 7.10457 6 6C6 4.89543 6.89543 4 8 4C9.10457 4 10 4.89543 10 6Z"
        />
        <path
          class="v-icon-primary"
          clip-rule="evenodd"
          d="M7.51886 2C5.57545 2 4 3.57545 4 5.51886C4 6.29936 4.21934 7.06414 4.633 7.726L8 13.1132L11.367 7.726C11.7807 7.06414 12 6.29936 12 5.51886C12 3.57545 10.4246 2 8.48114 2H7.51886ZM2 5.51886C2 2.47088 4.47088 0 7.51886 0H8.48114C11.5291 0 14 2.47088 14 5.51886C14 6.6742 13.6753 7.80628 13.063 8.786L8 16.8868L2.937 8.786C2.32468 7.80628 2 6.6742 2 5.51886Z"
          fill-rule="evenodd"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
    <button
      aria-pressed="false"
      class="v-toggle v-gap-6"
    >
      Label 2
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-view-list"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          clip-rule="evenodd"
          d="M4 2.99219H2V4.99219H4V2.99219ZM0 0.992188V6.99219H6V0.992188H0ZM8 4.99219H16V2.99219H8V4.99219ZM8 12.9922H16V10.9922H8V12.9922ZM2 10.9922H4V12.9922H2V10.9922ZM0 14.9922V8.99219H6V14.9922H0Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <button
      aria-pressed="false"
      class="v-toggle v-gap-6"
    >
      Label 3
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-view-grid"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          clip-rule="evenodd"
          d="M3 2.99219H5V4.99219H3V2.99219ZM1 6.99219V0.992188H7V6.99219H1ZM3 10.9922H5V12.9922H3V10.9922ZM1 14.9922V8.99219H7V14.9922H1ZM13 2.99219H11V4.99219H13V2.99219ZM9 0.992188V6.99219H15V0.992188H9ZM11 10.9922H13V12.9922H11V10.9922ZM9 14.9922V8.99219H15V14.9922H9Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </fieldset>
</div>
`;

exports[`Toggle examples Standalone multi-select toggle should render correctly 1`] = `
<div>
  <fieldset
    class="v-toggle-container"
  >
    <button
      aria-label="Label 1"
      aria-pressed="false"
      class="v-toggle v-gap-6"
      id="standalone-multi-select-toggle"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-low v-icon-map-location"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M12 12.001C10.07 12.001 8.5 10.431 8.5 8.50098C8.5 6.57098 10.07 5.00098 12 5.00098C13.93 5.00098 15.5 6.57098 15.5 8.50098C15.5 10.431 13.93 12.001 12 12.001ZM12 7.00098C11.17 7.00098 10.5 7.67098 10.5 8.50098C10.5 9.33098 11.17 10.001 12 10.001C12.83 10.001 13.5 9.33098 13.5 8.50098C13.5 7.67098 12.83 7.00098 12 7.00098Z"
        />
        <path
          class="v-icon-primary"
          d="M12.8596 22.511H11.1496L5.14955 12.511C2.98955 8.92098 4.15955 4.24098 7.74955 2.08098C8.92955 1.37098 10.2796 1.00098 11.6596 1.00098H12.3396C16.5296 1.00098 19.9396 4.41098 19.9396 8.60098C19.9396 9.98098 19.5596 11.331 18.8596 12.511L12.8596 22.511ZM11.6596 3.00098C10.6396 3.00098 9.64955 3.28098 8.77955 3.80098C6.12955 5.39098 5.26955 8.84098 6.85955 11.491L11.9996 20.061L17.1396 11.491C17.6596 10.621 17.9396 9.62098 17.9396 8.61098C17.9396 5.52098 15.4296 3.01098 12.3396 3.01098H11.6596V3.00098Z"
        />
      </svg>
    </button>
  </fieldset>
</div>
`;
